--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
+    "bcryptjs": "^3.0.2",
     "express": "^4.21.2",
     "mysql2": "^3.13.0",
     "reflect-metadata": "^0.2.2",
